# wx-template

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Readme.txt  vcpkg.json
cmake/: Toolchain.cmake
src/: main.cpp
